# hermes-agent

./: .gitattributes  CONTRIBUTING.md  Dockerfile  cli-config.yaml.example  cli.py  hermes_constants.py  hermes_state.py  model_tools.py  pyproject.toml  run_agent.py  toolsets.py
.github/actions/detect-changes/: action.yml
.github/workflows/: ci.yml  docker.yml  lint.yml  rescue-plane-docker-proof.yml  tests.yml  upload_to_pypi.yml  uv-lockfile-check.yml
agent/: agent_init.py  agent_runtime_helpers.py  auxiliary_client.py  background_review.py  chat_completion_helpers.py  codex_runtime.py  conversation_loop.py  credential_pool.py  curator.py  linux_eac_state_guard.py  moa_loop.py  model_metadata.py  openrouter_fallback_guard.py  rescue_plane_core.py  rescue_quiescence_reporter.py  task_execution_contract.py  tool_executor.py  tool_guardrails.py  tournament_research_contract.py  tournament_truth_support.py  turn_context.py  turn_finalizer.py  usage_pricing.py
apps/desktop/src/: hermes.ts
apps/desktop/src/app/settings/: tools-settings.tsx
apps/desktop/src/store/: onboarding.ts
contributors/emails/: Steve@ah360views.com
cron/: jobs.py  scheduler.py
docker/: stage2-hook.sh
docker/cont-init.d/: 02-reconcile-profiles
docker/s6-rc.d/rescue-quiescence-reporter/: finish  run
docs/: resilience-safe-mode.md  telegram-liveness-marker.md  tournament-research-contract.md
docs/security/: execution-boundary-audit.md  execution-boundary-registry.json
gateway/: config.py  restart_loop_guard.py  run.py  status.py
hermes_cli/: cli_commands_mixin.py  codex_models.py  commands.py  config.py  doctor.py  gateway.py  goals.py  gpt56_routing.py  kanban.py  kanban_db.py  kanban_decompose.py  kanban_specify.py  main.py  managed_scope.py  middleware.py  model_switch.py  models.py  profile_describer.py  runtime_provider.py  setup.py  tools_config.py  toolset_validation.py  web_server.py
optional-skills/devops/docker-management/: SKILL.md
optional-skills/devops/hermes-s6-container-supervision/: SKILL.md
optional-skills/security/unbroker/: SKILL.md
optional-skills/security/unbroker/references/: methods.md  state-machine.md
plugins/kanban/dashboard/: plugin_api.py
plugins/memory/hindsight/: __init__.py
plugins/memory/honcho/: __init__.py  client.py  session.py
plugins/stt/hermes_agent_stt/: transcription_tools.py
plugins/stt/tests/: test_transcription_tools.py
plugins/tts/hermes_agent_tts/: tts_tool.py
plugins/tts/tests/: test_tts_mistral.py
plugins/video_gen/fal/: __init__.py
plugins/web/firecrawl/: provider.py
scripts/: check_execution_boundaries.py  release.py
skills/project-handoff/: SKILL.md
tests/: test_docker_runtime_line_endings.py  test_hermes_constants.py  test_packaging_metadata.py  test_project_metadata.py  test_toolsets.py
tests/agent/: test_auxiliary_client.py  test_auxiliary_compression_timeout_floor.py  test_codex_ttfb_watchdog.py  test_compression_fallback_budget.py  test_gpt56_auxiliary_consumers.py  test_gpt56_auxiliary_routing.py  test_gpt56_fallback_routing.py  test_gpt56_moa_aggregator.py  test_linux_eac_state_guard.py  test_model_metadata.py  test_non_stream_stale_timeout.py  test_openrouter_fallback_guard.py  test_project_handoff_skill.py  test_rescue_plane_core.py  test_rescue_plane_security.py  test_task_execution_contract.py  test_tournament_output_unblocked_regression.py  test_tournament_research_contract.py  test_tournament_truth_guardrails.py  test_turn_context.py  test_turn_finalizer_cleanup_guard.py  test_turn_finalizer_final_response_persistence.py
tests/agent/transports/: test_codex_transport.py
tests/cli/: test_reasoning_command.py
tests/cron/: test_cron_reasoning_effort.py  test_jobs.py  test_scheduler.py
tests/docker/: conftest.py  test_dump_build_sha.py  test_home_override_scripts.py  test_reconcile_profile_permissions.py  test_rescue_reporter_continuity.py
tests/fixtures/: tournament_route_preflight_v2_a23b3016.json
tests/fixtures/rescue_plane/: artifact-sticky-20260717-v1.json
tests/gateway/: test_agent_cache.py  test_platform_base.py  test_pre_gateway_dispatch.py  test_run_tool_media_re.py  test_safe_mode_transport.py  test_status.py  test_stream_consumer_fresh_final.py  test_telegram_documents.py  test_telegram_liveness_marker.py  test_telegram_rich_messages.py  test_tts_media_routing.py  test_unknown_command.py
tests/hermes_cli/: test_gateway_restart_loop.py  test_goals.py  test_gpt56_registration.py  test_gpt56_routing_policy.py  test_kanban_cli.py  test_kanban_decompose.py  test_kanban_goal_mode.py  test_kanban_specify.py  test_managed_scope_overlay.py  test_plugins.py  test_profile_describer.py  test_runtime_provider_resolution.py  test_safe_mode.py  test_tools_config.py  test_toolset_validation.py  test_web_server.py
tests/honcho_plugin/: test_session.py
tests/plugins/: test_kanban_dashboard_plugin.py
tests/run_agent/: test_860_dedup.py  test_moa_loop_mode.py  test_primary_runtime_restore.py  test_run_agent.py  test_tool_call_guardrail_runtime.py  test_tournament_research_runtime.py
tests/scripts/: test_check_execution_boundaries.py
tests/skills/: test_unbroker_skill.py
tests/tools/: test_async_delegation.py  test_delegate.py  test_delegate_gpt56_routing.py  test_delegate_subagent_timeout_diagnostic.py  test_dockerfile_immutable_install.py  test_file_tools.py  test_kanban_tools.py  test_managed_browserbase_and_modal.py  test_managed_media_gateways.py  test_process_registry.py  test_send_message_tool.py  test_session_search.py  test_tournament_truth_gate_tool.py  test_transcription_dotenv_fallback.py
tools/: async_delegation.py  cronjob_tools.py  delegate_tool.py  file_tools.py  kanban_tools.py  lazy_deps.py  mcp_tool.py  process_registry.py  registry.py  send_message_tool.py  session_search_tool.py  terminal_tool.py  tournament_truth_gate_tool.py  vision_tools.py
website/docs/developer-guide/: architecture.md
website/docs/user-guide/: docker.md
website/docs/user-guide/features/: kanban.md
website/static/api/: model-catalog.json
(+5 files in other folders)
